Added main melee weapon damage