@@ -28,6 +28,7 @@ import org.bukkit.scheduler.BukkitRunnable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
 
@@ -58,13 +59,17 @@ public class Berserker extends CoinKit implements Listener {
 
         // Weapon
         regularSword = CSItemCreator.weapon(new ItemStack(Material.IRON_SWORD),
-                Component.text("Iron Sword", NamedTextColor.GREEN), null,
+                Component.text("Iron Sword", NamedTextColor.GREEN),
+                List.of(Component.empty(),
+                        Component.text("53 Melee Damage", NamedTextColor.DARK_GREEN)),
                 Collections.singletonList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), meleeDamage);
         es.hotbar[0] = regularSword;
         // Voted Weapon
         regularSwordVoted = CSItemCreator.weapon(new ItemStack(Material.IRON_SWORD),
                 Component.text("Iron Sword", NamedTextColor.GREEN),
-                Collections.singletonList(Component.text("- voted: +2 damage", NamedTextColor.AQUA)),
+                List.of(Component.empty(),
+                        Component.text("55 Melee Damage", NamedTextColor.DARK_GREEN)
+                                .append(Component.text(" (+2 from voting)", NamedTextColor.DARK_AQUA))),
                 Collections.singletonList(new Tuple<>(Enchantment.LOOT_BONUS_MOBS, 0)), meleeDamage + 2);
         es.votedWeapon = new Tuple<>(regularSwordVoted, 0);
 
